# bg-stremio-addon

./: .dockerignore  .gitignore  AGENTS.md  BG_AUDIO_SEARCH_RESULTS.md  CHANGELOG.md  COMPLETE_SMOKE_TEST.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_KOYEB.md  Dockerfile  Dockerfile.koyeb  ENHANCED_SMOKE_TEST.md  FEATURE_COMPLETE.md  FILMIZT_ADDON_PLAN.md  FILMIZT_KSPLAYER_SOLUTION.md  FILMIZT_PRODUCTION_PLAN.md  FILMIZT_SCRAPER_SUCCESS.md  FILMIZT_STREAM_ANALYSIS.md  Makefile  README.md  ROLLBACK_PLAN_BG_AUDIO.md  RUNBOOK.md  SMOKE_TEST_REPORT.md  analyze_bg_content.py  analyze_real_streams.py  app.py  bg_infuse_wrapper.py  build_log.txt  codex_rules.md  deploy-koyeb.sh  entrypoint.sh  filmizt_scraper_prototype.py  inspect_os_page.py  local_manifest.json  local_stremio_manifest.json  main.py  manifest.json  measure_multi_performance.py  measure_performance.py  meta_builder.py  pyproject.toml  (+23 more)
anime/: mal.py
app/: cache_manager.py  constants.py  logger.py  main.py  settings.py  utils.py
balkan-vault/: manifest.json  requirements.txt  run_local.sh  test_app.py  test_zamunda.py  test_zelka.py
benchmarks/: runtime_alignment_sample.py  test_hash_matching_benchmark.py  year_utils.py
bg_subtitles_app/: Dockerfile  README.md  RUNBOOK.md  run.sh
community_vendor/: Dockerfile.koyeb  __init__.py  run.py
data/: letterboxd_collections.json
providers/: letterboxd.py
scripts/: deploy-koyeb.sh
src/: app.py  test_subsland.py
static/: addonCard.js
templates/: configure.html  link_generator.html
tests/: test_audio_detection.py  test_basic.py  test_catalog.py  test_extract.py  (+13 more)
(+122 files in other folders)
